--- a/views/tour_cost.ejs
+++ b/views/tour_cost.ejs
@@ -210,7 +210,7 @@
                                     </div>
 
                                     <div id="field" class="step1_cost_item_wrap"></div>
-                                    <button type="button" class="plus_cost btn btn-block col-xs-12" onclick="addCostItem()">
+                                    <button type="button" id="plus_cost" class="plus_cost btn btn-block col-xs-12" onclick="addCostItem()">
                                         <span><img src="/img/ic-add-blue.svg"></span>
                                         <span class="text_tour_education">항목 추가</span>
                                     </button>
