5, 6번 항목 수정 완료 (지출 인풋 너비를 100px로 고정, 교육 이미지 overflow: hidden 적용)

--- a/views/home_bgn.ejs
+++ b/views/home_bgn.ejs
@@ -16,7 +16,7 @@
             /*#CONTENT_ON { min-height: -webkit-fill-available; background: #f4f4f4; }*/
             #CONTENT_ON { min-height: -webkit-fill-available; }
             .side-nav ul li:hover{ background: white; }
-            .tour_image { position: relative; }
+            .tour_image { position: relative; overflow: hidden; }
             .tour_image img.tour_background { position: absolute; left: 0; top: 0; }
         </style>
     </head>
