--- a/views/home_profile.ejs
+++ b/views/home_profile.ejs
@@ -13,7 +13,7 @@
         <style>
             #btn_back { position: absolute; width: 40px; height: 40px; top: 0; left: 0; margin-left: 5px; margin-top: 5px; }
             #back { position: absolute; width: 16px; opacity: 0.54; top: 0; left: 0; margin-top: 12px; margin-left: 12px; }
-            .tour_image { position: relative; }
+            .tour_image { position: relative; overflow: hidden; }
             .tour_image img.tour_background { position: absolute; left: 0; top: 0; }
         </style>
     </head>
